Notebookbar: Fix Tabs' overlapping into other elements
Make the whole nav bar scroll-able, specially important when still on
desktop but using small factor screen or simply when resizing window

--- a/browser/css/menubar.css
+++ b/browser/css/menubar.css
@@ -77,6 +77,12 @@
 }
 .main-nav.hasnotebookbar {
 	height: 32px;
+	overflow: scroll hidden;
+	scrollbar-width: none;
+	-ms-scrollbar: none;
+}
+.main-nav.hasnotebookbar::-webkit-scrollbar {
+	height: 0;
 }
 .main-nav.hasnotebookbar:not(.readonly) {
 	background: var(--gray-light-bg-color);
